<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shrinkMode="strict"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ed7834"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/title_text"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:fontFamily="sans-serif-smallcaps"
        android:src="@drawable/millis"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_above="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:weightSum="1">


            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:background="#e2822d"
                android:layout_height="33dp"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:layout_weight="2.25" />

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:weightSum="3.0">

            <Button
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button9"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Singup with EMAIL"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />

</RelativeLayout>